--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,142 @@
           <div class="header__email__text">work@biz-plan.kz</div><a href="#">Задать вопрос</a>
         </div>
       </div>
-      <div class="line"></div>
+      <div class="line_container">
+        <div class="line"></div>
+      </div>
+      <div class="header_menu">
+        <ul> 
+          <li> <a href="#">Главная</a></li>
+          <li> <a href="#">Услуги</a></li>
+          <li> <a href="#">Стоимость</a></li>
+          <li> <a href="#">Статьи</a></li>
+          <li> <a href="#">Портфолио</a></li>
+          <li> <a href="#">Купить бизнес-план</a></li>
+          <li> <a href="#">Скачать бизнес-план</a></li>
+          <li> <a href="#">FAQ</a></li>
+          <li> <a href="#">Контакты</a></li>
+        </ul>
+      </div>
+      <div class="main_slider"> 
+        <div class="main_slider__text">
+          <div class="title"> 
+            <h1>
+               Разработка бизнес планов и ТЭО <i class="green">«ПОД КЛЮЧ»</i></h1>
+          </div>
+          <div class="description">
+             с 100% гарантией принятия к рассмотрению</div>
+          <div class="button">
+            <button class="orange">Бесплатная консультация</button>
+          </div>
+        </div>
+        <div class="main_slider__image"></div>
+      </div>
+      <div class="handout_container">
+        <div class="handout"> 
+          <div class="handout__image"><img src="images/svg/handout_01.svg"></div>
+          <div class="handout__text_block">
+            <div class="title">Цены </div>
+            <div class="text">Точная стоимость зависит от сложности проекта. Минимум - 90 000 ₸</div>
+          </div>
+        </div>
+        <div class="handout"> 
+          <div class="handout__image"><img src="images/svg/handout_02.svg"></div>
+          <div class="handout__text_block">
+            <div class="title">Сроки</div>
+            <div class="text">Средний срок разработки проектов составляет от 3 до 15 дней</div>
+          </div>
+        </div>
+        <div class="handout"> 
+          <div class="handout__image"><img src="images/svg/handout_03.svg"></div>
+          <div class="handout__text_block">
+            <div class="title">Опыт</div>
+            <div class="text">На рынке услуг по разработке бизнес-планов компания ведет свою деятельность с 2015 г.</div>
+          </div>
+        </div>
+        <div class="handout"> 
+          <div class="handout__image"><img src="images/svg/handout_04.svg"></div>
+          <div class="handout__text_block">
+            <div class="title">Гарантии </div>
+            <div class="text">В стоимость бизнес-плана включено внесение возможных корректировок в случае изменения параметров проекта</div>
+          </div>
+        </div>
+      </div>
+      <h2>Наши услуги</h2>
+      <div class="garanty_cards">
+        <div class="card green">
+          <div class="card_content">
+            <div class="card_icon"><img src="images/svg/card_01.svg"></div>
+            <div class="card_title">Разработка бизнес-планов и ТЭО</div>
+            <div class="card_text">Бизнес-план поможет решить несколько задач. Получить субсидии от государства. Привлечь банковский кредит для открытия или расширения бизнеса. Предоставить бизнес-план частному инвестору </div>
+          </div>
+          <div class="arrow_btn"></div>
+        </div>
+        <div class="card">
+          <div class="card_content">
+            <div class="card_icon"><img src="images/svg/card_02.svg"></div>
+            <div class="card_title">Маркетинговые исследования</div>
+            <div class="card_text">Маркетинговые исследования необходимы, когда нужно понять конъюнктуру рынка, анализировать потребителей, исследовать предложения конкурентов в определенной нише.</div>
+          </div>
+          <div class="arrow_btn"></div>
+        </div>
+        <div class="card">
+          <div class="card_content">
+            <div class="card_icon"><img src="images/svg/card_03.svg"></div>
+            <div class="card_title">Расчет финансовой модели</div>
+            <div class="card_text">Финансовая модель  это стержень вашего бизнеса. В ней представлены доходы-расходы предприятия, динамика денежных потоков, расчеты основных финансовых показателей, позволяющих оценить эффективность проекта.</div>
+          </div>
+          <div class="arrow_btn"></div>
+        </div>
+        <div class="card green">
+          <div class="card_content">
+            <div class="card_icon"><img src="images/svg/card_04.svg"></div>
+            <div class="card_title">Подготовка презентации проекта</div>
+            <div class="card_text">Маркетинговые исследования необходимы, когда нужно понять конъюнктуру рынка, анализировать потребителей, исследовать предложения конкурентов в определенной нише.</div>
+          </div>
+          <div class="arrow_btn"></div>
+        </div>
+      </div>
+      <h2>Наши гарантии</h2>
+      <div class="garanty_cards"> 
+        <div class="garanty_card">
+          <div class="icon"> </div>
+          <div class="title">Гарантия качества</div>
+          <div class="text">Ваш бизнес-план оформлен в соответствие с требованиями инвестора, банка или государственного учреждения, он учитывает особенности Вашего региона и включает в себя все необходимые расчеты и пояснения</div>
+        </div>
+        <div class="garanty_card">
+          <div class="icon"> </div>
+          <div class="title">Оптимальные сроки</div>
+          <div class="text">Вы спокойны – Ваш бизнес-план разработан в согласованный с Вами срок и у Вас есть время подготовиться к его защите</div>
+        </div>
+        <div class="garanty_card">
+          <div class="icon"> </div>
+          <div class="title">Бесплатное сопровождение</div>
+          <div class="text">Мы готовы проконсультировать Вас о том, как успешно защитить бизнес-план. При необходимости мы поможем Вам подготовить его презентацию</div>
+        </div>
+      </div>
+    </div>
+    <div class="bpan_container">
+      <div class="container"> 
+        <div class="bplan"> 
+          <div class="title">Что содержит бизнес - план ?</div>
+          <ul> 
+            <li>Анализ рынка, в котором планируется реализация продукции (оказание услуг)</li>
+            <li>Маркетинговый план и схема распространения продукции (услуг), а также план продаж в разрезе месяц/год</li>
+            <li>Инвестиционный план с календарным графиком реализации</li>
+            <li>Организационно-управленческий план с расчетом фонда оплаты труда</li>
+            <li>Автоматизированная финансовая модель в формате электронной таблицы Excel</li>
+            <li>Финансовые индикаторы и оценка эффективности проекта</li>
+            <li>Анализ сильных и слабых сторон проекта, оценка рисков</li>
+            <li>Социально-экономическое и экологическое обоснование проекта</li>
+          </ul>
+          <div class="button">
+            <button class="orange">Посмотреть пример</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container"> 
+      <h2>Cхема работы</h2>
     </div>
     <script defer src="js/app.min.js"></script>
   </body>
