--- a/app/index.html
+++ b/app/index.html
@@ -145,29 +145,200 @@
         </div>
       </div>
     </div>
-    <div class="bpan_container">
-      <div class="container"> 
-        <div class="bplan"> 
-          <div class="title">Что содержит бизнес - план ?</div>
-          <ul> 
-            <li>Анализ рынка, в котором планируется реализация продукции (оказание услуг)</li>
-            <li>Маркетинговый план и схема распространения продукции (услуг), а также план продаж в разрезе месяц/год</li>
-            <li>Инвестиционный план с календарным графиком реализации</li>
-            <li>Организационно-управленческий план с расчетом фонда оплаты труда</li>
-            <li>Автоматизированная финансовая модель в формате электронной таблицы Excel</li>
-            <li>Финансовые индикаторы и оценка эффективности проекта</li>
-            <li>Анализ сильных и слабых сторон проекта, оценка рисков</li>
-            <li>Социально-экономическое и экологическое обоснование проекта</li>
-          </ul>
-          <div class="button">
-            <button class="orange">Посмотреть пример</button>
+    <div class="lighter_bg">
+      <div class="bpan_container">
+        <div class="container"> 
+          <div class="bplan"> 
+            <div class="title">Что содержит бизнес - план ?</div>
+            <ul> 
+              <li>Анализ рынка, в котором планируется реализация продукции (оказание услуг)</li>
+              <li>Маркетинговый план и схема распространения продукции (услуг), а также план продаж в разрезе месяц/год</li>
+              <li>Инвестиционный план с календарным графиком реализации</li>
+              <li>Организационно-управленческий план с расчетом фонда оплаты труда</li>
+              <li>Автоматизированная финансовая модель в формате электронной таблицы Excel</li>
+              <li>Финансовые индикаторы и оценка эффективности проекта</li>
+              <li>Анализ сильных и слабых сторон проекта, оценка рисков</li>
+              <li>Социально-экономическое и экологическое обоснование проекта</li>
+            </ul>
+            <div class="button">
+              <button class="orange">Посмотреть пример</button>
+            </div>
           </div>
         </div>
       </div>
+      <div class="container">
+        <h2>Cхема работы</h2>
+        <div class="scheme"> 
+                <div class="scheme_item"> 
+                  <div class="scheme_item__number"> 
+                    <div class="check_mark"> </div>
+                    <div class="number">01</div>
+                    <div class="arrow"></div>
+                  </div>
+                  <div class="scheme_item__text"> 
+                    <div class="title">Звонок или заявка на сайте</div>
+                    <div class="text">Менеджер свяжется с Вами, проведет бесплатную консультацию и назначит при необходимости встречу</div>
+                  </div>
+                </div>
+                <div class="scheme_item"> 
+                  <div class="scheme_item__number"> 
+                    <div class="check_mark"> </div>
+                    <div class="number">02</div>
+                    <div class="arrow"></div>
+                  </div>
+                  <div class="scheme_item__text"> 
+                    <div class="title">Согласование деталей</div>
+                    <div class="text">Разбираем имеющуюся у Вас информацию, согласовываем стоимость, сроки и ключевые моменты работы. </div>
+                  </div>
+                </div>
+                <div class="scheme_item"> 
+                  <div class="scheme_item__number"> 
+                    <div class="check_mark"> </div>
+                    <div class="number">03</div>
+                    <div class="arrow"></div>
+                  </div>
+                  <div class="scheme_item__text"> 
+                    <div class="title">Внесение предоплаты</div>
+                    <div class="text">Выставляем счет на предоплату 50%. Составляем ТЗ на разработку проекта и </div>
+                  </div>
+                </div>
+                <div class="scheme_item"> 
+                  <div class="scheme_item__number"> 
+                    <div class="check_mark"> </div>
+                    <div class="number">04</div>
+                    <div class="arrow"></div>
+                  </div>
+                  <div class="scheme_item__text"> 
+                    <div class="title">Работа над проектом</div>
+                    <div class="text">Подготавливаем проект в согласованные сроки. В среднем от 5 – 15 рабочих дней</div>
+                  </div>
+                </div>
+                <div class="scheme_item"> 
+                  <div class="scheme_item__number"> 
+                    <div class="check_mark"> </div>
+                    <div class="number">05</div>
+                    <div class="arrow"></div>
+                  </div>
+                  <div class="scheme_item__text"> 
+                    <div class="title">Презентация проекта</div>
+                    <div class="text">Высылаем демо-версию проекта на согласование. Устраняем возможные замечания и вносим необходимые корректировки </div>
+                  </div>
+                </div>
+                <div class="scheme_item"> 
+                  <div class="scheme_item__number"> 
+                    <div class="check_mark"> </div>
+                    <div class="number">06</div>
+                    <div class="arrow"></div>
+                  </div>
+                  <div class="scheme_item__text"> 
+                    <div class="title">Завершение проекта</div>
+                    <div class="text">Разбираем имеющуюся у Вас информацию, согласовываем стоимость, сроки и ключевые моменты работы. </div>
+                  </div>
+                </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="director"> 
+          <div class="director__photo"> </div>
+          <div class="director__text_block">
+            <div class="quote">“</div>
+            <div class="name">Иван Редькин</div>
+            <div class="position">Директор</div>
+            <div class="description">Заказать бизнес-план или ТЭО, так чтобы не переплатить и гарантированно получить хороший уровень услуг? Тогда вы обратились по адресу. За годы практики в подготовке проектов в разлиные финансирующие структуры нашей страны, мы накопили успешный опыт, опираясь на который наши клиенты получают желаемый результат.</div>
+            <div class="title">Оставьте заявку и мы Вам перезвоним</div>
+            <div class="request_form"> 
+              <div class="form">
+                <input class="phone" id="phone1" type="text" placeholder="+7(___)___-__-__">
+                <input class="orange" type="submit" value="Заказать звонок">
+              </div>
+              <div class="callus">
+                <div class="text">
+                   Или <strong>позвоните нам</strong></div>
+                <div class="phone">+7 (702) 286-58-26</div>
+                <div class="text2">Мы проконсультируем вас</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container"> 
+        <h2>Кто будет работать над вашим проектом </h2>
+        <div class="team"> 
+                <div class="team__item">
+                  <div class="photo"><img src="images/team_01.jpg"></div>
+                  <div class="name">Бауыржан Калменов</div>
+                  <div class="position">Экономист</div>
+                </div>
+                <div class="team__item">
+                  <div class="photo"><img src="images/team_02.jpg"></div>
+                  <div class="name">Денис Скородумов</div>
+                  <div class="position">Маркетолог</div>
+                </div>
+                <div class="team__item">
+                  <div class="photo"><img src="images/team_03.jpg"></div>
+                  <div class="name">Юлия Дойникова</div>
+                  <div class="position">Маркетолог</div>
+                </div>
+                <div class="team__item">
+                  <div class="photo"><img src="images/team_04.jpg"></div>
+                  <div class="name">Дмитрий Грохольский</div>
+                  <div class="position">Маркетолог</div>
+                </div>
+                <div class="team__item">
+                  <div class="photo"><img src="images/team_05.jpg"></div>
+                  <div class="name">Бауыржан Калменов</div>
+                  <div class="position">Экономист</div>
+                </div>
+        </div>
+      </div>
+      <div class="our_works_bg">
+        <div class="container"> 
+          <div class="our_works"> 
+            <div class="header">На 2021 г. выполнено более 310 проектов</div>
+            <div class="vertical_text">Бизнес проект                </div>
+            <div class="our_works__text_block"> 
+              <div class="title">Наши последние проекты</div>
+              <div class="description">
+                 Пополнение оборотного капитала для
+                расширения деятельности по оптовой
+                реализации мобильных аксессуаров
+              </div>
+              <div class="points"> 
+                <div class="point">
+                  <div class="text1">Регион</div>
+                  <div class="text2">Акмолинская обл.</div>
+                </div>
+                <div class="point">
+                  <div class="text1">Сумма инвестиций</div>
+                  <div class="text2">120 тыс. ₸</div>
+                </div>
+                <div class="point">
+                  <div class="text1">Количество страниц</div>
+                  <div class="text2">64 страниц</div>
+                </div>
+                <div class="point">
+                  <div class="text1">Срок</div>
+                  <div class="text2">12 дней</div>
+                </div>
+              </div>
+              <button class="orange">Смотреть все проекты</button>
+            </div>
+            <div class="our_work__slider"><img src="images/work_slilder_1.jpg"></div>
+          </div>
+        </div>
+      </div>
+      <div class="container"> 
+        <div class="clients"> 
+          <div class="clients__text_block"> 
+            <div class="title">Разработанные нами бизнес-планы, успешно проходят экспертизы и получают финансирование у крупнейших инвестиционных операторов различных государственных программ</div>
+            <div class="text">Также помимо подготовки проектов в государственные структуры, мы успешно разрабатываем бизнес-планы и ТЭО для кредитования в банки второго уровня по всему Казахстану</div>
+          </div>
+          <div class="clients__sliders">fwef</div>
+        </div>
+      </div>
+      <div class="container"> 
+        <h2>Часто задаваемые вопросы</h2>
+      </div>
     </div>
-    <div class="container"> 
-      <h2>Cхема работы</h2>
-    </div>
-    <script defer src="js/app.min.js"></script>
   </body>
 </html>
