--- a/app/index.html
+++ b/app/index.html
@@ -53,8 +53,13 @@
           <li> <a href="#">Контакты</a></li>
         </ul>
       </div>
-      <div class="main_slider">
-gu
+      <div class="main_slider"> 
+        <div class="main_slider__nav"> 
+          <div class="nav_element active"> </div>
+          <div class="nav_element"></div>
+          <div class="nav_element"></div>
+          <div class="nav_element"></div>
+        </div>
         <div class="main_slider__text">
           <div class="title"> 
             <h1>
